# gRPC_implementation

./: .gitignore  CMakeLists.txt  README.md  Гайд gRPC Трубач.docx  Два разных CMakeLists.txt  Лекция ASPNETCORE_XX_gRPC_2.docx
gRPC/: CMakeLists.txt  gRPC.cpp  gRPC.h
proto/: math_operations.grpc.pb.cc  math_operations.grpc.pb.h  math_operations.pb.cc  math_operations.pb.h  math_operations.proto
src/: client.cpp  server.cpp
